--- a/index.html
+++ b/index.html
@@ -36,6 +36,34 @@
     input[type=range] {
       width: 100%;
     }
+    input[type=range]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      background: #FFD700;
+      cursor: pointer;
+      transition: box-shadow 0.3s ease;
+    }
+
+    input[type=range]:hover::-webkit-slider-thumb,
+    input[type=range]:active::-webkit-slider-thumb {
+      box-shadow: 0 0 10px #fff, 0 0 20px #FFD700;
+    }
+
+    input[type=range]::-moz-range-thumb {
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      background: #FFD700;
+      cursor: pointer;
+      transition: box-shadow 0.3s ease;
+    }
+
+    input[type=range]:hover::-moz-range-thumb,
+    input[type=range]:active::-moz-range-thumb {
+      box-shadow: 0 0 10px #fff, 0 0 20px #FFD700;
+    }
     .animal-options {
       display: flex;
       justify-content: center;
@@ -80,6 +108,17 @@
     }
     button:hover {
       transform: scale(1.1);
+      box-shadow: 0 0 10px #fff, 0 0 20px #28a745;
+    }
+    #countdown {
+      display: none;
+      text-align: center;
+      margin-top: 100px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 300px;
     }
     #countdown, #test, #gameOver {
       display: none;
@@ -166,6 +205,55 @@
       transform: scale(1.1);
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
     }
+    #countdown h2 {
+      font-size: 3em;
+      color: #FFD700;
+      text-shadow: 2px 2px 5px #000;
+      animation: popIn 0.6s ease-in-out infinite alternate;
+    }
+
+    #countdownTimer {
+      font-size: 4em;
+      color: #00FFFF;
+      font-weight: bold;
+      text-shadow: 2px 2px 5px #000;
+      animation: bounceIn 0.6s ease-in-out infinite alternate;
+    }
+
+    @keyframes popIn {
+      from { transform: scale(1); }
+      to { transform: scale(1.2); }
+    }
+
+    @keyframes bounceIn {
+      from { transform: translateY(0); }
+      to { transform: translateY(-10px); }
+    }
+
+    .sound-toggle {
+      padding: 10px 20px;
+      font-size: 1.1em;
+      font-weight: bold;
+      background-color: #ffcc00;
+      color: #000;
+      border: 2px solid #fff;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      display: inline-block;
+    }
+
+    .sound-toggle:hover {
+      background-color: #ffd633;
+      box-shadow: 0 0 10px #fff, 0 0 20px #ffcc00;
+      transform: scale(1.05);
+    }
+
+    .sound-toggle.active {
+      background-color: #28a745;
+      color: #fff;
+      border-color: #28a745;
+    }
   </style>
 </head>
 <body>
@@ -220,8 +308,8 @@
       <span id="outcomeDurationValue">2</span>
     </div>
     <div class="form-group">
-      <label>Sound?</label>
-      <input type="checkbox" id="soundToggle" />
+      <button id="soundToggleBtn" class="sound-toggle" onclick="toggleSound()">Play Sound?</button>
+      <img id="soundIcon" src="speaker_white.jpeg" alt="Sound Icon" style="display: none; margin-left: 10px; height: 30px; vertical-align: middle;" />
     </div>
     <button onclick="startGame()">Go!</button>
   </div>
@@ -248,6 +336,7 @@
   </div>
 
   <script>
+    const beepAudio = new Audio('beep.wav');
     let selections = {};
     let selectedDifficulty = null;
     let tries = 5, score = 0, currentTry = 0;
@@ -276,7 +365,7 @@
         numTries: +document.getElementById('numTries').value,
         stimDuration: +document.getElementById('stimDuration').value,
         outcomeDuration: +document.getElementById('outcomeDuration').value,
-        soundOn: document.getElementById('soundToggle').checked,
+        soundOn: document.getElementById('soundToggleBtn').classList.contains('active'),
         difficulty: selectedDifficulty
       };
       tries = selections.numTries;
@@ -296,11 +385,15 @@
           document.getElementById('test').style.display = 'block';
           runTask();
         }
-      }, 1000);
+      }, 600);
     }
 
     function runTask() {
       if (currentTry >= tries) {
+        if (selections.soundOn) {
+          beepAudio.pause();
+          beepAudio.currentTime = 0;
+        }
         document.getElementById('test').style.display = 'none';
         document.getElementById('gameOver').style.display = 'block';
         document.getElementById('finalScore').textContent = `Score: ${score} / ${tries}`;
@@ -308,6 +401,11 @@
       }
 
       document.getElementById('taskNum').textContent = currentTry + 1;
+      if (selections.soundOn) {
+        beepAudio.pause();
+        beepAudio.currentTime = 0;
+        beepAudio.play();
+      }
 
       const waveContainer = document.getElementById('wave-container');
       waveContainer.innerHTML = ''; // clear previous animals
@@ -321,24 +419,52 @@
       }[difficulty];
 
       for (let i = 0; i < 5; i++) {
-        const img = document.createElement('img');
-        img.src = document.querySelector('.animal-option.selected img').src;
+      const img = document.createElement('img');
+      const selectedAnimal = document.querySelector('.animal-option.selected img');
+      const baseSrc = selectedAnimal.getAttribute('onmouseout').match(/'([^']+)'/)[1];
+      img.src = baseSrc;
         img.className = 'moving-animal';
+        img.style.top = `${Math.floor(Math.random() * 200) + 50}px`;
+        img.style.left = '-150px';
         img.style.animation = `${animClass} ${2 + i * 0.3}s linear ${i * 0.5}s forwards`;
         img.style.zIndex = 5 - i; // Ensure layering flows naturally
         waveContainer.appendChild(img);
       }
 
-      window.correctAnswer = direction === 'Forward' ? 'P' : 'Q';
+      window.correctAnswer = direction === 'Forward' ? 'Q' : 'P';
       currentTry++;
     }
 
     function handleResponse(key) {
+      console.log('User Pressed:', key);
+      console.log('Correct Answer:', window.correctAnswer);
+      alert(`You pressed: ${key.toUpperCase()} — Correct was: ${window.correctAnswer.toUpperCase()}`);
+
       if (key.toUpperCase() === window.correctAnswer.toUpperCase()) {
         score++;
+        console.log('Correct! Score:', score);
+      } else {
+        console.log('Incorrect.');
       }
+
       document.getElementById('score').textContent = `Score: ${score}`;
+      if (selections.soundOn) {
+        beepAudio.pause();
+        beepAudio.currentTime = 0;
+      }
       runTask();
+    }
+
+    function toggleSound() {
+      const btn = document.getElementById('soundToggleBtn');
+      btn.classList.toggle('active');
+      if (btn.classList.contains('active')) {
+        btn.textContent = 'Sound On';
+        document.getElementById('soundIcon').style.display = 'inline-block';
+      } else {
+        btn.textContent = 'Play Sound?';
+        document.getElementById('soundIcon').style.display = 'none';
+      }
     }
   </script>
 </body>
