--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
     <h2 style="color: white; font-size: 2.5em; text-shadow: 2px 2px 5px #000;">All Done!</h2>
     <p id="finalScore" style="color: #FFD700; font-size: 2em; font-weight: bold; text-shadow: 2px 2px 5px #000;">Score: 0 / 0</p>
     <button onclick="location.reload()" style="background-color: #28a745; font-size: 1.5em;">Restart</button>
-  </div>
+    <button onclick="showFeedbackForm()" style="background-color: #1E90FF; font-size: 1.2em; margin-top: 10px;">Submit Feedback</button>
+  </div>  
 
   <script>
     window.correctRight = 0;
@@ -545,6 +546,30 @@
         document.getElementById('soundIcon').style.display = 'none';
       }
     }
+
+    function showFeedbackForm() {
+      document.getElementById('gameOver').style.display = 'none';
+      document.getElementById('feedbackForm').style.display = 'block';
+    }
+
+    function submitFeedback() {
+      alert("Feedback submitted! Thank you.");
+      // Here you can collect form data and send it to a server or database.
+    }
   </script>
+  <div id="feedbackForm" style="display:none; max-width: 600px; margin: 40px auto; padding: 20px; background-color: #f2f2f2; border-radius: 10px; font-family: sans-serif;">
+    <h2 style="text-align:center; color:#333;">Feedback Form</h2>
+    <input type="text" placeholder="Name" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;" />
+    <input type="number" placeholder="Age" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;" />
+    <select style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;">
+      <option value="">Select Gender</option>
+      <option value="Male">Male</option>
+      <option value="Female">Female</option>
+      <option value="Other">Other</option>
+    </select>
+    <input type="date" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;" />
+    <input type="text" placeholder="Current Medication" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;" />
+    <button onclick="submitFeedback()" style="width:100%; background-color:#1E90FF; color:white; padding:10px; font-size: 1em; border:none; border-radius:5px;">Submit Feedback</button>
+  </div>
 </body>
 </html>
