--- a/index.html
+++ b/index.html
@@ -557,18 +557,18 @@
       // Here you can collect form data and send it to a server or database.
     }
   </script>
-  <div id="feedbackForm" style="display:none; max-width: 600px; margin: 40px auto; padding: 20px; background-color: #f2f2f2; border-radius: 10px; font-family: sans-serif;">
-    <h2 style="text-align:center; color:#333;">Feedback Form</h2>
-    <input type="text" placeholder="Name" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;" />
-    <input type="number" placeholder="Age" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;" />
-    <select style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;">
+  <div class="container" id="feedbackForm" style="display:none;">
+    <h2 style="text-align:center; color:white;">Feedback Form</h2>
+    <input type="text" placeholder="Name" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em; background-color: #fff; color: #000;" />
+    <input type="number" placeholder="Age" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em; background-color: #fff; color: #000;" />
+    <select style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em; background-color: #fff; color: #000;">
       <option value="">Select Gender</option>
       <option value="Male">Male</option>
       <option value="Female">Female</option>
       <option value="Other">Other</option>
     </select>
-    <input type="date" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;" />
-    <input type="text" placeholder="Current Medication" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em;" />
+    <input type="date" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em; background-color: #fff; color: #000;" />
+    <input type="text" placeholder="Current Medication" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em; background-color: #fff; color: #000;" />
     <button onclick="submitFeedback()" style="width:100%; background-color:#1E90FF; color:white; padding:10px; font-size: 1em; border:none; border-radius:5px;">Submit Feedback</button>
   </div>
 </body>
