--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       font-family: 'Comic Sans MS', cursive, sans-serif;
       background: url('Images/Background.jpeg') no-repeat center center fixed;
       background-size: cover;
+      image-rendering: auto;
+      image-rendering: crisp-edges;
+      image-rendering: -webkit-optimize-contrast;
       color: #fff;
     }
     .container {
@@ -672,8 +675,11 @@
  
     // Start background cycling
     backgroundCycleInterval = setInterval(() => {
-      document.body.style.background = `url('Images/Background_${(currentBackgroundIndex % 3) + 1}.jpeg') no-repeat center center fixed`;
+      document.body.style.backgroundImage = `url('Images/Background_${(currentBackgroundIndex % 3) + 1}.jpeg')`;
       document.body.style.backgroundSize = 'cover';
+      document.body.style.backgroundPosition = 'top left';
+      document.body.style.backgroundRepeat = 'no-repeat';
+      document.body.style.backgroundAttachment = 'fixed';
       currentBackgroundIndex = (currentBackgroundIndex + 1) % 3;
     }, 500); // Change background every 500ms
   } else {
@@ -681,8 +687,11 @@
     clearInterval(backgroundCycleInterval);
     backgroundCycleInterval = null;
     currentBackgroundIndex = 0;
-    document.body.style.background = "url('Images/Background.jpeg') no-repeat center center fixed";
+    document.body.style.backgroundImage = "url('Images/Background.jpeg')";
     document.body.style.backgroundSize = 'cover';
+    document.body.style.backgroundPosition = 'top left';
+    document.body.style.backgroundRepeat = 'no-repeat';
+    document.body.style.backgroundAttachment = 'fixed';
   }
 }
   </script>
