--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         </div>
         <div class="animal-option" data-animal="owl" style="scroll-snap-align: center;">
           <img src="Images/Owl/owl_on_branch.jpeg" alt="Owl" id="owlImg" onmouseover="this.src='Images/Owl/owl_off_branch.jpeg'" onmouseout="this.src='Images/Owl/owl_on_branch.jpeg'" />
-          <div>Owl</div>
+          <div>Elephant</div>
         </div>
         <div class="animal-option" data-animal="monkey" style="scroll-snap-align: center;">
           <img src="Images/Monkey/monkey_before_swing.jpeg" alt="Monkey" id="monkeyImg" onmouseover="this.src='Images/Monkey/monkey_after_swing.jpeg'" onmouseout="this.src='Images/Monkey/monkey_before_swing.jpeg'" />
