--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <div class="light"></div>
   </div>
   -->
-  <button onclick="window.location.href='https://kaushikvada3.github.io/Perceptual-Learning-App/'"
+  <button onclick="window.location.href='https://perceptual-app-beta-1-hui4j8opj-kaushik-vadas-projects.vercel.app/'"
     style="
       position: fixed;
       top: 20px;
