--- a/index.html
+++ b/index.html
@@ -523,6 +523,7 @@
       // Step 2: Store for final score display
       totalTries = selections.numTries;
       document.getElementById('home').style.display = 'none';
+      document.getElementById('howItWorks').style.display = 'none'; // hide instructions
       document.getElementById('countdown').style.display = 'block';
       startCountdown();
     }
@@ -1129,7 +1130,7 @@
     <input type="text" placeholder="Current Medication" style="width:100%; margin-bottom:10px; padding:10px; font-size: 1em; background-color: #fff; color: #000;" />
     <button onclick="submitFeedback()" style="width:100%; background-color:#1E90FF; color:white; padding:10px; font-size: 1em; border:none; border-radius:5px;">Submit Feedback</button>
   </div>
-  <div class="container" style="margin-top: 40px; background-color: rgba(0,0,0,0.7); padding: 20px; color: white; border-radius: 10px;">
+  <div id="howItWorks" class="container" style="margin-top: 40px; background-color: rgba(0,0,0,0.7); padding: 20px; color: white; border-radius: 10px;">
     <h2>📘 How the Game Works</h2>
     <h3>🔹 1. Difficulty Levels</h3>
     <p>Each difficulty level controls how tilted the animal appears:</p>
